@@ -13,11 +13,10 @@ import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import org.elasticsearch.gradle.internal.test.rerun.model.FailedTestsReport;
-import org.elasticsearch.gradle.internal.test.rerun.model.TestCase;
-import org.elasticsearch.gradle.internal.test.rerun.model.WorkUnit;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
 import org.gradle.api.file.RegularFileProperty;
+import org.gradle.api.logging.Logger;
 import org.gradle.api.provider.Provider;
 import org.gradle.api.services.BuildService;
 import org.gradle.api.services.BuildServiceParameters;
@@ -27,95 +26,156 @@ import java.io.File;
 import java.io.IOException;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
- * Gradle plugin that implements smart test retries by filtering test execution based on
- * historical failure data from Develocity (Gradle Enterprise).
+ * Gradle plugin that implements smart test retries by skipping test tasks and
+ * individual tests that succeeded in previous build attempts.
  * <p>
- * When a Buildkite job is retried, the pre-command hook fetches
- * failed test information from the Develocity API and creates a .failed-test-history.json file.
- * This plugin reads that file and configures test tasks to run only the tests that failed
- * in the previous attempt, significantly reducing retry time.
- * <p>
- * If no history file exists, all tests run normally. If a test task has no failures in the
- * history, it is skipped entirely.
+ * When a Buildkite job is retried, the pre-command hook produces a
+ * {@code .failed-test-history.json} file listing tasks and individual tests that
+ * completed successfully. This plugin reads that file and:
+ * <ul>
+ *   <li>Skips entire test tasks listed in {@code successfulTasks}</li>
+ *   <li>Excludes individual passing tests listed in {@code successfulTests}
+ *       from partially-failed tasks, unless the project disabled that via
+ *       {@link SmartRetryExtension#getPruneIndividualTests()}</li>
+ *   <li>Runs everything else normally</li>
+ * </ul>
+ * If no history file exists, all tests run normally.
  */
 public abstract class InternalTestRerunPlugin implements Plugin<Project> {
 
-    /**
-     * File name for failed test history created by Buildkite pre-command hook.
-     * This file is populated from Develocity API during job retries.
-     */
     public static final String FAILED_TEST_HISTORY_FILENAME = ".failed-test-history.json";
 
-    /**
-     * Maximum file size for the failed test history JSON file (10MB).
-     * This prevents potential DoS from malformed or malicious files.
-     */
-    private static final long MAX_JSON_FILE_SIZE = 10 * 1024 * 1024;
+    // Guard against OOM: the entire file is read into memory and held for the whole build in the long-lived Gradle daemon.
+    private static final long MAX_JSON_FILE_SIZE = 100 * 1024 * 1024;
 
     @Override
     public void apply(Project project) {
         File settingsRoot = project.getLayout().getSettingsDirectory().getAsFile();
+
+        SmartRetryExtension extension = project.getExtensions().create("smartRetry", SmartRetryExtension.class);
+        extension.getPruneIndividualTests().convention(true);
 
         Provider<RetryTestsBuildService> retryTestsProvider = project.getGradle()
             .getSharedServices()
             .registerIfAbsent("retryTests", RetryTestsBuildService.class, spec -> {
                 spec.getParameters().getInfoPath().set(settingsRoot);
             });
-        project.getTasks().withType(Test.class).configureEach(task -> configureTestTask(task, retryTestsProvider));
+        project.getTasks().withType(Test.class).configureEach(task -> configureTestTask(task, retryTestsProvider, extension));
     }
 
-    private static void configureTestTask(Test test, Provider<InternalTestRerunPlugin.RetryTestsBuildService> testsBuildServiceProvider) {
-        FailedTestsReport failureReport = testsBuildServiceProvider.get().getFailureReport();
-        if (failureReport == null) {
-            // no historical test failures found
+    private static void configureTestTask(
+        Test test,
+        Provider<RetryTestsBuildService> testsBuildServiceProvider,
+        SmartRetryExtension extension
+    ) {
+        FailedTestsReport report = testsBuildServiceProvider.get().getReport();
+        if (report == null) {
             test.getLogger().info("No failed test history found, running all tests");
             return;
         }
 
-        WorkUnit workUnit = testsBuildServiceProvider.get().getWorkUnitForTask(test.getPath());
-        if (workUnit != null) {
-            // State 1: Task has recorded failures — rerun only failed tests
-            List<TestCase> tests = workUnit.tests();
-            int totalTestCount = tests.stream().mapToInt(tc -> tc.children().size()).sum();
-            test.getLogger().lifecycle("Smart retry: filtering to {} failed test classes ({} test methods)", tests.size(), totalTestCount);
-            test.filter(testFilter -> {
-                for (TestCase testClassCase : tests) {
-                    if (testClassCase.name() == null) {
-                        test.getLogger().warn("Skipping test class with null name in smart retry filter");
-                        continue;
-                    }
-                    List<TestCase> children = testClassCase.children();
-                    for (TestCase child : children) {
-                        if (child.name() == null) {
-                            test.getLogger().warn("Skipping test method with null name in class {}", testClassCase.name());
-                            continue;
-                        }
-                        testFilter.includeTest(testClassCase.name(), child.name());
-                    }
-                }
-            });
-        } else if (testsBuildServiceProvider.get().wasTaskExecuted(test.getPath())) {
-            // State 2: Task was executed but had no failures — confirmed passed, skip it
-            test.getLogger().lifecycle("Smart retry: skipping {} (confirmed passed in previous run)", test.getPath());
-            test.onlyIf("Skipped by smart retry - confirmed passed in previous run", element -> false);
-        } else {
-            // State 3: Task was never executed (or executedTestTasks data unavailable) — run all tests
-            test.getLogger().lifecycle("Smart retry: running all tests for {} (not executed in previous run)", test.getPath());
+        if (test.getPath().endsWith("remote-cluster") || test.getPath().endsWith("mixed-cluster")) {
+            test.getLogger().lifecycle("Smart retry: running all tests for {} (multi-cluster task, never skipped)", test.getPath());
+            return;
         }
+
+        if (testsBuildServiceProvider.get().wasTaskSuccessful(test.getPath())) {
+            test.getLogger().lifecycle("Smart retry: skipping {} (succeeded in previous run)", test.getPath());
+            test.onlyIf("Skipped by smart retry - succeeded in previous run", element -> false);
+            return;
+        }
+
+        List<String> suitesToExclude = testsBuildServiceProvider.get().getSuccessfulSuitesForTask(test.getPath());
+        List<String> testsToExclude = testsBuildServiceProvider.get().getSuccessfulTestsForTask(test.getPath());
+        if (suitesToExclude.isEmpty() && testsToExclude.isEmpty()) {
+            test.getLogger().lifecycle("Smart retry: running all tests for {} (not confirmed successful in previous run)", test.getPath());
+            return;
+        }
+
+        if (extension.getPruneIndividualTests().get() == false && testsToExclude.isEmpty() == false) {
+            int rerunTestCount = testsToExclude.size();
+            testsToExclude = List.of();
+            if (suitesToExclude.isEmpty()) {
+                test.getLogger()
+                    .lifecycle(
+                        "Smart retry: rerunning {} successful tests in {} (project opted out of individual test pruning)",
+                        rerunTestCount,
+                        test.getPath()
+                    );
+                return;
+            }
+            test.getLogger()
+                .lifecycle(
+                    "Smart retry: excluding {} successful suites from {} and rerunning {} successful tests "
+                        + "(project opted out of individual test pruning)",
+                    suitesToExclude.size(),
+                    test.getPath(),
+                    rerunTestCount
+                );
+        } else {
+            test.getLogger()
+                .lifecycle(
+                    "Smart retry: excluding {} successful suites and {} successful tests from {} (rerunning failures)",
+                    suitesToExclude.size(),
+                    testsToExclude.size(),
+                    test.getPath()
+                );
+        }
+
+        Set<String> methodExcludePatterns = buildMethodExcludePatterns(testsToExclude, test.getLogger());
+        test.filter(filter -> {
+            for (String className : suitesToExclude) {
+                filter.excludeTestsMatching(className + ".*");
+            }
+            for (String pattern : methodExcludePatterns) {
+                filter.excludeTestsMatching(pattern);
+            }
+        });
+    }
+
+    /**
+     * Translates {@code Class#method} references into Gradle test filter patterns.
+     * <p>
+     * Tests run by the randomized runner with a {@code @ParametersFactory} are reported with their parameters appended, for
+     * example {@code test {yaml=analysis-common/30_tokenizers/letter}}. Such a test is only excluded when both its
+     * parameterized name and its bare method name match an exclude pattern, because
+     * {@code RandomizedRunner#applyFilters} keeps a candidate as soon as either description is allowed to run. So for a
+     * parameterized reference we emit the bare method name in addition to the parameterized one. That does not
+     * over-exclude the method's other parameters: those keep a parameterized name no pattern matches, which is enough to
+     * keep them running.
+     */
+    static Set<String> buildMethodExcludePatterns(List<String> testRefs, Logger logger) {
+        Set<String> patterns = new LinkedHashSet<>();
+        for (String testRef : testRefs) {
+            int hashIdx = testRef.indexOf('#');
+            if (hashIdx < 0) {
+                logger.warn("Skipping malformed test reference in smart retry: {}", testRef);
+                continue;
+            }
+            String className = testRef.substring(0, hashIdx);
+            String methodName = testRef.substring(hashIdx + 1);
+            patterns.add(className + "." + methodName);
+
+            int paramsIdx = methodName.indexOf(" {");
+            if (paramsIdx >= 0) {
+                patterns.add(className + "." + methodName.substring(0, paramsIdx));
+            }
+        }
+        return patterns;
     }
 
     public abstract static class RetryTestsBuildService implements BuildService<RetryTestsBuildService.Params> {
 
-        private final FailedTestsReport failureReport;
-        private final Map<String, WorkUnit> workUnitsByPath;
-        private final Set<String> executedTestTasks;
+        private final FailedTestsReport report;
+        private final Set<String> successfulTasks;
+        private final Map<String, List<String>> successfulSuites;
+        private final Map<String, List<String>> successfulTests;
 
         interface Params extends BuildServiceParameters {
             RegularFileProperty getInfoPath();
@@ -124,7 +184,6 @@ public abstract class InternalTestRerunPlugin implements Plugin<Project> {
         public RetryTestsBuildService() {
             File failedTestsJsonFile = new File(getParameters().getInfoPath().getAsFile().get(), FAILED_TEST_HISTORY_FILENAME);
             if (failedTestsJsonFile.exists()) {
-                // Validate file size to prevent DoS from malformed or malicious files
                 long fileSize = failedTestsJsonFile.length();
                 if (fileSize > MAX_JSON_FILE_SIZE) {
                     throw new RuntimeException(
@@ -133,67 +192,37 @@ public abstract class InternalTestRerunPlugin implements Plugin<Project> {
                 }
 
                 try {
-                    // Configure ObjectMapper with stricter validation
                     ObjectMapper objectMapper = new ObjectMapper();
                     objectMapper.configure(DeserializationFeature.FAIL_ON_NULL_FOR_PRIMITIVES, true);
-                    this.failureReport = objectMapper.readValue(failedTestsJsonFile, FailedTestsReport.class);
-
-                    // Build a HashMap for O(1) lookup instead of O(n) stream filtering
-                    this.workUnitsByPath = this.failureReport.workUnits()
-                        .stream()
-                        .collect(Collectors.toMap(WorkUnit::name, Function.identity()));
-
-                    // Build a HashSet from executedTestTasks for O(1) lookup.
-                    // A null list means the data was unavailable (API call failed or old format),
-                    // which triggers safe fallback (run all tests for unknown tasks).
-                    List<String> executed = this.failureReport.executedTestTasks();
-                    this.executedTestTasks = executed != null ? new HashSet<>(executed) : null;
+                    this.report = objectMapper.readValue(failedTestsJsonFile, FailedTestsReport.class);
+                    this.successfulTasks = new HashSet<>(this.report.successfulTasks());
+                    this.successfulSuites = this.report.successfulSuites();
+                    this.successfulTests = this.report.successfulTests();
                 } catch (IOException e) {
                     throw new RuntimeException(String.format("Failed to parse %s", FAILED_TEST_HISTORY_FILENAME), e);
                 }
             } else {
-                this.failureReport = null;
-                this.workUnitsByPath = Collections.emptyMap();
-                this.executedTestTasks = null;
+                this.report = null;
+                this.successfulTasks = Set.of();
+                this.successfulSuites = Map.of();
+                this.successfulTests = Map.of();
             }
         }
 
-        public FailedTestsReport getFailureReport() {
-            return failureReport;
+        public FailedTestsReport getReport() {
+            return report;
         }
 
-        /**
-         * Gets the work unit for a given test task path.
-         * This uses a HashMap for O(1) lookup performance.
-         *
-         * @param taskPath the Gradle task path (e.g., ":server:test")
-         * @return the WorkUnit for this task, or null if no failures recorded
-         */
-        public WorkUnit getWorkUnitForTask(String taskPath) {
-            return workUnitsByPath.get(taskPath);
+        public boolean wasTaskSuccessful(String taskPath) {
+            return successfulTasks.contains(taskPath);
         }
 
-        /**
-         * Checks whether a test task was actually executed in the previous build run.
-         * This is used for three-state logic: a task not in workUnits could be either
-         * "confirmed passed" (was executed, no failures) or "never executed" (Gradle
-         * stopped before reaching it).
-         * <p>
-         * Returns {@code true} if the task was confirmed executed. Returns {@code false}
-         * if the task was not executed OR if executed task data is unavailable (null),
-         * which triggers the safe fallback of running all tests.
-         * <p>
-         * Note: a task that started but crashed before completing would appear in
-         * executedTestTasks yet have no entry in workUnits. In practice this is safe
-         * because such a crash produces a non-test exit code (e.g. 137 for OOM),
-         * so the smart retry path (exit_status 1) is never reached. If this assumption
-         * ever changes, consider cross-checking with Gradle build outcome data.
-         *
-         * @param taskPath the Gradle task path (e.g., ":server:test")
-         * @return true if the task was confirmed executed in the previous run
-         */
-        public boolean wasTaskExecuted(String taskPath) {
-            return executedTestTasks != null && executedTestTasks.contains(taskPath);
+        public List<String> getSuccessfulSuitesForTask(String taskPath) {
+            return successfulSuites.getOrDefault(taskPath, Collections.emptyList());
+        }
+
+        public List<String> getSuccessfulTestsForTask(String taskPath) {
+            return successfulTests.getOrDefault(taskPath, Collections.emptyList());
         }
     }
 }
