@@ -9,13 +9,10 @@
 
 package org.elasticsearch.gradle.test;
 
-import org.gradle.api.JavaVersion;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
 import org.gradle.api.invocation.Gradle;
 import org.gradle.api.tasks.testing.Test;
-
-import java.util.List;
 
 public class GradleTestPolicySetupPlugin implements Plugin<Project> {
 
@@ -25,14 +22,6 @@ public class GradleTestPolicySetupPlugin implements Plugin<Project> {
         project.getTasks().withType(Test.class).configureEach(test -> {
             test.systemProperty("tests.gradle", true);
             test.systemProperty("tests.task", test.getPath());
-
-            test.getJvmArgumentProviders().add(() -> {
-                if (test.getJavaVersion().compareTo(JavaVersion.VERSION_23) <= 0) {
-                    return List.of("-Djava.security.manager=allow");
-                } else {
-                    return List.of();
-                }
-            });
 
             SystemPropertyCommandLineArgumentProvider nonInputProperties = new SystemPropertyCommandLineArgumentProvider();
             // don't track these as inputs since they contain absolute paths and break cache relocatability
